y.output
   0  $accept : program $end

   1  program : decls

   2  decls : decl
   3        | decls decl

   4  decl : variabledecl
   5       | functiondecl
   6       | classdecl
   7       | interfacedecl

   8  variabledecl : variable Y_Semicolon

   9  identifier : Y_Identifier

  10  variable : type identifier

  11  type : Y_Int
  12       | Y_Double
  13       | Y_Bool
  14       | Y_String
  15       | Y_TypeIdentifier
  16       | type Y_LBracket Y_RBracket

  17  functiondecl : type identifier Y_LParen formals Y_RParen stmtblock

  18  $$1 :

  19  functiondecl : Y_Void $$1 identifier Y_LParen formals Y_RParen stmtblock

  20  variablelist : variable
  21               | variablelist Y_Comma variable

  22  formals : variablelist
  23          |

  24  identifierlist : identifier
  25                 | identifierlist Y_Comma identifier

  26  nextends : extends
  27           |

  28  $$2 :

  29  extends : Y_Extends $$2 identifier

  30  nimplements : implements
  31              |

  32  $$3 :

  33  implements : Y_Implements $$3 identifierlist

  34  nfields : fields
  35          |

  36  fields : field
  37         | fields field

  38  $$4 :

  39  classdecl : Y_Class $$4 identifier nextends nimplements Y_LBrace nfields Y_RBrace

  40  field : variabledecl
  41        | functiondecl

  42  nprototypes : prototypes
  43              |

  44  prototypes : prototype
  45             | prototypes prototype

  46  $$5 :

  47  interfacedecl : Y_Interface $$5 identifier Y_LBrace nprototypes Y_RBrace

  48  prototype : type identifier Y_LParen formals Y_RParen Y_Semicolon

  49  $$6 :

  50  prototype : Y_Void $$6 identifier Y_LParen formals Y_RParen Y_Semicolon

  51  variabledecls : variabledecl
  52                | variabledecls variabledecl

  53  stmts : stmt
  54        | stmts stmt

  55  nvariabledecls : variabledecls
  56                 |

  57  nstmts : stmts
  58         |

  59  stmtblock : Y_LBrace nvariabledecls nstmts Y_RBrace

  60  open_stmt : open_if
  61            | open_while
  62            | open_for

  63  matched_stmt : matched_if
  64               | matched_while
  65               | matched_for
  66               | other_stmt

  67  other_stmt : nexpr Y_Semicolon
  68             | printstmt
  69             | returnstmt
  70             | breakstmt
  71             | stmtblock

  72  stmt : matched_stmt
  73       | open_stmt

  74  commonif : Y_If Y_LParen expr Y_RParen

  75  matched_if : commonif matched_stmt Y_Else matched_stmt

  76  open_if : commonif stmt
  77          | commonif matched_stmt Y_Else open_stmt

  78  commonwhile : Y_While Y_LParen expr Y_RParen

  79  matched_while : commonwhile matched_stmt

  80  open_while : commonwhile open_stmt

  81  commonfor : Y_For Y_LParen nexpr Y_Semicolon expr Y_Semicolon nexpr Y_RParen

  82  matched_for : commonfor matched_stmt

  83  open_for : commonfor open_stmt

  84  $$7 :

  85  returnstmt : Y_Return $$7 nexpr Y_Semicolon

  86  $$8 :

  87  breakstmt : Y_Break $$8 Y_Semicolon

  88  $$9 :

  89  printstmt : Y_Print $$9 Y_LParen exprlist Y_RParen Y_Semicolon

  90  exprlist : expr
  91           | exprlist Y_Comma expr

  92  nexpr : expr
  93        |

  94  $$10 :

  95  expr : lvalue Y_Assign $$10 expr
  96       | constant
  97       | lvalue
  98       | Y_This
  99       | call
 100       | Y_LParen expr Y_RParen

 101  $$11 :

 102  expr : expr Y_Plus $$11 expr

 103  $$12 :

 104  expr : expr Y_Minus $$12 expr

 105  $$13 :

 106  expr : expr Y_Times $$13 expr

 107  $$14 :

 108  expr : expr Y_Divide $$14 expr

 109  $$15 :

 110  expr : expr Y_Mod $$15 expr

 111  $$16 :

 112  expr : Y_Minus $$16 expr

 113  $$17 :

 114  expr : expr Y_Less $$17 expr

 115  $$18 :

 116  expr : expr Y_Greater $$18 expr

 117  $$19 :

 118  expr : expr Y_LessEqual $$19 expr

 119  $$20 :

 120  expr : expr Y_GreaterEqual $$20 expr

 121  $$21 :

 122  expr : expr Y_Equal $$21 expr

 123  $$22 :

 124  expr : expr Y_NotEqual $$22 expr

 125  $$23 :

 126  expr : expr Y_And $$23 expr

 127  $$24 :

 128  expr : expr Y_Or $$24 expr

 129  $$25 :

 130  expr : Y_Not $$25 expr

 131  $$26 :

 132  expr : Y_ReadInteger $$26 Y_LParen Y_RParen

 133  $$27 :

 134  expr : Y_ReadLine $$27 Y_LParen Y_RParen

 135  $$28 :

 136  expr : Y_New $$28 Y_LParen identifier Y_RParen

 137  $$29 :

 138  expr : Y_NewArray $$29 Y_LParen expr Y_Comma type Y_RParen

 139  lvalue : identifier
 140         | expr Y_Dot identifier
 141         | expr Y_LBracket expr Y_RBracket

 142  _identifier : identifier

 143  call : _identifier Y_LParen actuals Y_RParen
 144       | expr Y_Dot _identifier Y_LParen actuals Y_RParen

 145  actuals : exprlist
 146          |

 147  constant : Y_IntConstant
 148           | Y_DoubleConstant
 149           | Y_BoolConstant
 150           | Y_StringConstant
 151           | Y_Null

state 0
	$accept : . program $end  (0)

	Y_Void  shift 1
	Y_Int  shift 2
	Y_Double  shift 3
	Y_Bool  shift 4
	Y_String  shift 5
	Y_Class  shift 6
	Y_Interface  shift 7
	Y_TypeIdentifier  shift 8
	.  error

	program  goto 9
	decls  goto 10
	decl  goto 11
	variabledecl  goto 12
	functiondecl  goto 13
	classdecl  goto 14
	interfacedecl  goto 15
	variable  goto 16
	type  goto 17


state 1
	functiondecl : Y_Void . $$1 identifier Y_LParen formals Y_RParen stmtblock  (19)
	$$1 : .  (18)

	.  reduce 18

	$$1  goto 18


state 2
	type : Y_Int .  (11)

	.  reduce 11


state 3
	type : Y_Double .  (12)

	.  reduce 12


state 4
	type : Y_Bool .  (13)

	.  reduce 13


state 5
	type : Y_String .  (14)

	.  reduce 14


state 6
	classdecl : Y_Class . $$4 identifier nextends nimplements Y_LBrace nfields Y_RBrace  (39)
	$$4 : .  (38)

	.  reduce 38

	$$4  goto 19


state 7
	interfacedecl : Y_Interface . $$5 identifier Y_LBrace nprototypes Y_RBrace  (47)
	$$5 : .  (46)

	.  reduce 46

	$$5  goto 20


state 8
	type : Y_TypeIdentifier .  (15)

	.  reduce 15


state 9
	$accept : program . $end  (0)

	$end  accept


state 10
	program : decls .  (1)
	decls : decls . decl  (3)

	Y_Void  shift 1
	Y_Int  shift 2
	Y_Double  shift 3
	Y_Bool  shift 4
	Y_String  shift 5
	Y_Class  shift 6
	Y_Interface  shift 7
	Y_TypeIdentifier  shift 8
	$end  reduce 1

	decl  goto 21
	variabledecl  goto 12
	functiondecl  goto 13
	classdecl  goto 14
	interfacedecl  goto 15
	variable  goto 16
	type  goto 17


state 11
	decls : decl .  (2)

	.  reduce 2


state 12
	decl : variabledecl .  (4)

	.  reduce 4


state 13
	decl : functiondecl .  (5)

	.  reduce 5


state 14
	decl : classdecl .  (6)

	.  reduce 6


state 15
	decl : interfacedecl .  (7)

	.  reduce 7


state 16
	variabledecl : variable . Y_Semicolon  (8)

	Y_Semicolon  shift 22
	.  error


state 17
	variable : type . identifier  (10)
	type : type . Y_LBracket Y_RBracket  (16)
	functiondecl : type . identifier Y_LParen formals Y_RParen stmtblock  (17)

	Y_Identifier  shift 23
	Y_LBracket  shift 24
	.  error

	identifier  goto 25


state 18
	functiondecl : Y_Void $$1 . identifier Y_LParen formals Y_RParen stmtblock  (19)

	Y_Identifier  shift 23
	.  error

	identifier  goto 26


state 19
	classdecl : Y_Class $$4 . identifier nextends nimplements Y_LBrace nfields Y_RBrace  (39)

	Y_Identifier  shift 23
	.  error

	identifier  goto 27


state 20
	interfacedecl : Y_Interface $$5 . identifier Y_LBrace nprototypes Y_RBrace  (47)

	Y_Identifier  shift 23
	.  error

	identifier  goto 28


state 21
	decls : decls decl .  (3)

	.  reduce 3


state 22
	variabledecl : variable Y_Semicolon .  (8)

	.  reduce 8


state 23
	identifier : Y_Identifier .  (9)

	.  reduce 9


state 24
	type : type Y_LBracket . Y_RBracket  (16)

	Y_RBracket  shift 29
	.  error


state 25
	variable : type identifier .  (10)
	functiondecl : type identifier . Y_LParen formals Y_RParen stmtblock  (17)

	Y_LParen  shift 30
	Y_Semicolon  reduce 10


state 26
	functiondecl : Y_Void $$1 identifier . Y_LParen formals Y_RParen stmtblock  (19)

	Y_LParen  shift 31
	.  error


state 27
	classdecl : Y_Class $$4 identifier . nextends nimplements Y_LBrace nfields Y_RBrace  (39)
	nextends : .  (27)

	Y_Extends  shift 32
	Y_Implements  reduce 27
	Y_LBrace  reduce 27

	nextends  goto 33
	extends  goto 34


state 28
	interfacedecl : Y_Interface $$5 identifier . Y_LBrace nprototypes Y_RBrace  (47)

	Y_LBrace  shift 35
	.  error


state 29
	type : type Y_LBracket Y_RBracket .  (16)

	.  reduce 16


state 30
	functiondecl : type identifier Y_LParen . formals Y_RParen stmtblock  (17)
	formals : .  (23)

	Y_Int  shift 2
	Y_Double  shift 3
	Y_Bool  shift 4
	Y_String  shift 5
	Y_TypeIdentifier  shift 8
	Y_RParen  reduce 23

	variable  goto 36
	type  goto 37
	formals  goto 38
	variablelist  goto 39


state 31
	functiondecl : Y_Void $$1 identifier Y_LParen . formals Y_RParen stmtblock  (19)
	formals : .  (23)

	Y_Int  shift 2
	Y_Double  shift 3
	Y_Bool  shift 4
	Y_String  shift 5
	Y_TypeIdentifier  shift 8
	Y_RParen  reduce 23

	variable  goto 36
	type  goto 37
	formals  goto 40
	variablelist  goto 39


state 32
	extends : Y_Extends . $$2 identifier  (29)
	$$2 : .  (28)

	.  reduce 28

	$$2  goto 41


state 33
	classdecl : Y_Class $$4 identifier nextends . nimplements Y_LBrace nfields Y_RBrace  (39)
	nimplements : .  (31)

	Y_Implements  shift 42
	Y_LBrace  reduce 31

	nimplements  goto 43
	implements  goto 44


state 34
	nextends : extends .  (26)

	.  reduce 26


state 35
	interfacedecl : Y_Interface $$5 identifier Y_LBrace . nprototypes Y_RBrace  (47)
	nprototypes : .  (43)

	Y_Void  shift 45
	Y_Int  shift 2
	Y_Double  shift 3
	Y_Bool  shift 4
	Y_String  shift 5
	Y_TypeIdentifier  shift 8
	Y_RBrace  reduce 43

	type  goto 46
	nprototypes  goto 47
	prototypes  goto 48
	prototype  goto 49


state 36
	variablelist : variable .  (20)

	.  reduce 20


state 37
	variable : type . identifier  (10)
	type : type . Y_LBracket Y_RBracket  (16)

	Y_Identifier  shift 23
	Y_LBracket  shift 24
	.  error

	identifier  goto 50


state 38
	functiondecl : type identifier Y_LParen formals . Y_RParen stmtblock  (17)

	Y_RParen  shift 51
	.  error


state 39
	variablelist : variablelist . Y_Comma variable  (21)
	formals : variablelist .  (22)

	Y_Comma  shift 52
	Y_RParen  reduce 22


state 40
	functiondecl : Y_Void $$1 identifier Y_LParen formals . Y_RParen stmtblock  (19)

	Y_RParen  shift 53
	.  error


state 41
	extends : Y_Extends $$2 . identifier  (29)

	Y_Identifier  shift 23
	.  error

	identifier  goto 54


state 42
	implements : Y_Implements . $$3 identifierlist  (33)
	$$3 : .  (32)

	.  reduce 32

	$$3  goto 55


state 43
	classdecl : Y_Class $$4 identifier nextends nimplements . Y_LBrace nfields Y_RBrace  (39)

	Y_LBrace  shift 56
	.  error


state 44
	nimplements : implements .  (30)

	.  reduce 30


state 45
	prototype : Y_Void . $$6 identifier Y_LParen formals Y_RParen Y_Semicolon  (50)
	$$6 : .  (49)

	.  reduce 49

	$$6  goto 57


state 46
	type : type . Y_LBracket Y_RBracket  (16)
	prototype : type . identifier Y_LParen formals Y_RParen Y_Semicolon  (48)

	Y_Identifier  shift 23
	Y_LBracket  shift 24
	.  error

	identifier  goto 58


state 47
	interfacedecl : Y_Interface $$5 identifier Y_LBrace nprototypes . Y_RBrace  (47)

	Y_RBrace  shift 59
	.  error


state 48
	nprototypes : prototypes .  (42)
	prototypes : prototypes . prototype  (45)

	Y_Void  shift 45
	Y_Int  shift 2
	Y_Double  shift 3
	Y_Bool  shift 4
	Y_String  shift 5
	Y_TypeIdentifier  shift 8
	Y_RBrace  reduce 42

	type  goto 46
	prototype  goto 60


state 49
	prototypes : prototype .  (44)

	.  reduce 44


state 50
	variable : type identifier .  (10)

	.  reduce 10


state 51
	functiondecl : type identifier Y_LParen formals Y_RParen . stmtblock  (17)

	Y_LBrace  shift 61
	.  error

	stmtblock  goto 62


state 52
	variablelist : variablelist Y_Comma . variable  (21)

	Y_Int  shift 2
	Y_Double  shift 3
	Y_Bool  shift 4
	Y_String  shift 5
	Y_TypeIdentifier  shift 8
	.  error

	variable  goto 63
	type  goto 37


state 53
	functiondecl : Y_Void $$1 identifier Y_LParen formals Y_RParen . stmtblock  (19)

	Y_LBrace  shift 61
	.  error

	stmtblock  goto 64


state 54
	extends : Y_Extends $$2 identifier .  (29)

	.  reduce 29


state 55
	implements : Y_Implements $$3 . identifierlist  (33)

	Y_Identifier  shift 23
	.  error

	identifier  goto 65
	identifierlist  goto 66


state 56
	classdecl : Y_Class $$4 identifier nextends nimplements Y_LBrace . nfields Y_RBrace  (39)
	nfields : .  (35)

	Y_Void  shift 1
	Y_Int  shift 2
	Y_Double  shift 3
	Y_Bool  shift 4
	Y_String  shift 5
	Y_TypeIdentifier  shift 8
	Y_RBrace  reduce 35

	variabledecl  goto 67
	functiondecl  goto 68
	variable  goto 16
	type  goto 17
	nfields  goto 69
	fields  goto 70
	field  goto 71


state 57
	prototype : Y_Void $$6 . identifier Y_LParen formals Y_RParen Y_Semicolon  (50)

	Y_Identifier  shift 23
	.  error

	identifier  goto 72


state 58
	prototype : type identifier . Y_LParen formals Y_RParen Y_Semicolon  (48)

	Y_LParen  shift 73
	.  error


state 59
	interfacedecl : Y_Interface $$5 identifier Y_LBrace nprototypes Y_RBrace .  (47)

	.  reduce 47


state 60
	prototypes : prototypes prototype .  (45)

	.  reduce 45


state 61
	stmtblock : Y_LBrace . nvariabledecls nstmts Y_RBrace  (59)
	nvariabledecls : .  (56)

	Y_Int  shift 2
	Y_Double  shift 3
	Y_Bool  shift 4
	Y_String  shift 5
	Y_TypeIdentifier  shift 8
	Y_Null  reduce 56
	Y_This  reduce 56
	Y_For  reduce 56
	Y_While  reduce 56
	Y_If  reduce 56
	Y_Return  reduce 56
	Y_Break  reduce 56
	Y_New  reduce 56
	Y_NewArray  reduce 56
	Y_Print  reduce 56
	Y_ReadInteger  reduce 56
	Y_ReadLine  reduce 56
	Y_BoolConstant  reduce 56
	Y_StringConstant  reduce 56
	Y_IntConstant  reduce 56
	Y_DoubleConstant  reduce 56
	Y_Identifier  reduce 56
	Y_Minus  reduce 56
	Y_Not  reduce 56
	Y_Semicolon  reduce 56
	Y_LParen  reduce 56
	Y_LBrace  reduce 56
	Y_RBrace  reduce 56

	variabledecl  goto 74
	variable  goto 16
	type  goto 37
	variabledecls  goto 75
	nvariabledecls  goto 76


state 62
	functiondecl : type identifier Y_LParen formals Y_RParen stmtblock .  (17)

	.  reduce 17


state 63
	variablelist : variablelist Y_Comma variable .  (21)

	.  reduce 21


state 64
	functiondecl : Y_Void $$1 identifier Y_LParen formals Y_RParen stmtblock .  (19)

	.  reduce 19

